[fix] ensure times new roman font family is displayed on mobile: edit to index.css

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
 }
 
 html {
-    font-family: serif;
+    font-family: 'Times New Roman', Times, serif;
 }
